--- a/html_css/index.html
+++ b/html_css/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
 <header>
     <nav>
         <ul>
@@ -18,24 +19,27 @@
 </header>
 
 <main>
-    <section class="profile">
-        <img src="../images/profile_image.jpg" alt="Profile Picture">
-        <h1>Josh Aney</h1>
-        <p>Computer Science Student at Montana State University</p>
-        <p><strong>Location:</strong> Bozeman, MT - Montana State University</p>
-        <div class="links">
-            <a href="mailto:josh.aney@icloud.com">Email</a> |
-            <a href="https://github.com/joshaney324">GitHub</a> |
-            <a href="www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
-        </div>
-    </section>
+    <div class="container">
+        <section class="profile">
+            <img src="../images/profile_image.jpg" alt="Profile Picture">
+            <h1>Josh Aney</h1>
+            <p>Computer Science Student at Montana State University</p>
+            <p><strong>Location:</strong> Bozeman, MT - Montana State University</p>
+            <div class="links">
+                <a href="mailto:josh.aney@icloud.com">Email</a> |
+                <a href="https://github.com/joshaney324">GitHub</a> |
+                <a href="https://www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
+            </div>
+        </section>
 
-    <section class="bio">
-        <h2>About Me</h2>
-        <p>Welcome! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Vestibulum et purus vitae justo scelerisque fermentum. Nam ac felis euismod, interdum tortor at, placerat ex.</p>
-        <p>Curabitur nec sapien eget eros bibendum scelerisque. <a href="#">Nulla facilisi</a>. Donec aliquet libero at justo cursus, id elementum metus ultricies. Suspendisse potenti. <a href="#">Etiam auctor</a> enim ac purus bibendum gravida.</p>
-        <p>Phasellus a elit id ex bibendum dictum. <a href="#">Curabitur dapibus</a> at lacus id tincidunt. Duis gravida, metus a consequat dapibus, orci velit gravida turpis, non venenatis felis eros ut ligula.</p>
-    </section>
+        <section class="bio">
+            <h2>About Me</h2>
+            <p>Welcome! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Vestibulum et purus vitae justo scelerisque fermentum. Nam ac felis euismod, interdum tortor at, placerat ex.</p>
+            <p>Curabitur nec sapien eget eros bibendum scelerisque. <a href="#">Nulla facilisi</a>. Donec aliquet libero at justo cursus, id elementum metus ultricies. Suspendisse potenti. <a href="#">Etiam auctor</a> enim ac purus bibendum gravida.</p>
+            <p>Phasellus a elit id ex bibendum dictum. <a href="#">Curabitur dapibus</a> at lacus id tincidunt. Duis gravida, metus a consequat dapibus, orci velit gravida turpis, non venenatis felis eros ut ligula.</p>
+        </section>
+    </div>
 </main>
+
 </body>
 </html>
