Reserach and personal projects pages

--- a/html/research_experience.html
+++ b/html/research_experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Josh Aney</title>
+    <title>Research/Experience - Josh Aney</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -11,35 +11,22 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Research/Experience</a></li>
-            <li><a href="#">Personal Projects</a></li>
+            <li><a href="index.html">About Me</a></li>
+            <li><a href="research_experience.html">Research/Experience</a></li>
+            <li><a href="personal_projects.html">Personal Projects</a></li>
         </ul>
     </nav>
 </header>
 
 <main>
     <div class="container">
-        <section class="profile">
-            <img src="../images/profile_image.jpg" alt="Profile Picture">
-            <h1>Josh Aney</h1>
-            <p>Computer Science Student at Montana State University</p>
-            <p><strong>Location:</strong> Bozeman, MT - Montana State University</p>
-            <div class="links">
-                <a href="mailto:josh.aney@icloud.com">Email</a> |
-                <a href="https://github.com/joshaney324">GitHub</a> |
-                <a href="https://www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
-            </div>
-        </section>
-
-        <section class="bio">
-            <h2>About Me</h2>
+        <section class="research">
+            <h2>Research</h2>
             <p>Welcome! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Vestibulum et purus vitae justo scelerisque fermentum. Nam ac felis euismod, interdum tortor at, placerat ex.</p>
             <p>Curabitur nec sapien eget eros bibendum scelerisque. <a href="#">Nulla facilisi</a>. Donec aliquet libero at justo cursus, id elementum metus ultricies. Suspendisse potenti. <a href="#">Etiam auctor</a> enim ac purus bibendum gravida.</p>
             <p>Phasellus a elit id ex bibendum dictum. <a href="#">Curabitur dapibus</a> at lacus id tincidunt. Duis gravida, metus a consequat dapibus, orci velit gravida turpis, non venenatis felis eros ut ligula.</p>
         </section>
     </div>
+
 </main>
 
-</body>
-</html>
