Basic content of ML projects and updates to about me page

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
             <li><a href="index.html">About Me</a></li>
             <li><a href="research_experience.html">Research/Experience</a></li>
             <li><a href="personal_projects.html">Personal Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
 </header>
@@ -23,20 +24,41 @@
         <section class="profile">
             <img src="../images/profile_image.jpg" alt="Profile Picture">
             <h1>Josh Aney</h1>
-            <p>Computer Science Student at Montana State University</p>
-            <p><strong>Location:</strong> Bozeman, MT - Montana State University</p>
+            <p><strong>Education:</strong> Montana State University</p>
+            <p><strong>Major:</strong> Computer Science</p>
+            <p><strong>Location:</strong> Bozeman, MT</p>
+            <p><strong>Links: </strong></p>
             <div class="links">
-                <a href="mailto:josh.aney@icloud.com">Email</a> |
-                <a href="https://github.com/joshaney324">GitHub</a> |
+                <a href="mailto:josh.aney@icloud.com">Email</a>
+                <a href="https://github.com/joshaney324">GitHub</a>
                 <a href="https://www.linkedin.com/in/josh-aney-67801528b">LinkedIn</a>
             </div>
         </section>
 
         <section class="bio">
             <h2>About Me</h2>
-            <p>Welcome! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Vestibulum et purus vitae justo scelerisque fermentum. Nam ac felis euismod, interdum tortor at, placerat ex.</p>
-            <p>Curabitur nec sapien eget eros bibendum scelerisque. <a href="#">Nulla facilisi</a>. Donec aliquet libero at justo cursus, id elementum metus ultricies. Suspendisse potenti. <a href="#">Etiam auctor</a> enim ac purus bibendum gravida.</p>
-            <p>Phasellus a elit id ex bibendum dictum. <a href="#">Curabitur dapibus</a> at lacus id tincidunt. Duis gravida, metus a consequat dapibus, orci velit gravida turpis, non venenatis felis eros ut ligula.</p>
+            <p>My name is Josh Aney, and I am currently a computer science student at Montana State University.
+                I am in my third year and I plan on graduating in the spring of 2026. Ever since I have been young, I
+                have always been fascinated with how computers, video games, or any other sort of software worked. I
+                could tell from a young age that I would be interested in pushing the limits of technology and applying
+                it into my own day-to-day life to solve problems</p>
+            <p>When I am not completing school work or working on other projects, I enjoy spending time outdoors. I love
+                getting out into the mountains to ski or bike. I live for any sort of adventures that will get me outside</p>
+            <h2>Academic Interests</h2>
+            <p>In school, I have grown to be very interested in the world of machine learning. I enjoy working with a
+                group of my peers to solve a problem that is given to us. Working in a group gives me a chance bounce ideas
+                off of other people to allow me to find new ways to manipulate a dataset or approach a certain challenge.
+                I also love getting to work with the math involved in many of these problems. I had the opportunity to
+                code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
+                why math is so important in my everyday life.</p>
+            <h2>Extracurricular Activities</h2>
+            <p>For the past two years, I have been able to be a part of the Spirit of the West Drumline. I started
+                playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
+                of playing snare drum at all of Montana State University's home football games which has been one of the
+                best experiences of my entire life.</p>
+            <p>I am also Co-President of the Montana State Club Tennis Team. Sports have always been a large part of my
+                life since a young age, and I am so happy that I am able to give students an opportunity to continue playing
+                or pick up tennis at a low cost when they come to college.</p>
         </section>
     </div>
 </main>
