--- a/html/personal_projects.html
+++ b/html/personal_projects.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 
+<script src="../js/slideshow.js"></script>
+
 <header>
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
             <li><a href="research_experience.html">Research/Experience</a></li>
             <li><a href="personal_projects.html">Personal Projects</a></li>
+            <li><a href="../images/resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 </header>
@@ -34,16 +37,25 @@
                 We then Compared our results from the noisy and non-noisy data. All of this was done in python.</p>
             <p><strong>Results:</strong> Our Naive Bayes model performed well on all the datasets with a slight decrease in performance with the simulated noise.</p>
 
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_1/original_data_avgs.svg" alt="Original Data Averages">
-                    <figcaption>Original Data Averages</figcaption>
+
+            <div class="slideshow-container ml_1">
+
+                <div class="mySlides fade" data-caption="Original Data Averages">
+                    <img src="../images/ml_1/original_data_avgs.svg" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_1/noisy_data_avgs.svg" alt="Noisy Data Averages">
-                    <figcaption>Noisy Data Averages</figcaption>
+
+                <div class="mySlides fade" data-caption="Noisy Data Averages">
+                    <img src="../images/ml_1/noisy_data_avgs.svg" class="slideshow-img">
                 </div>
+
+                <div style="padding-top: 20px">
+                    <a class="prev" onclick="showSlide('.ml_1', -1)">&#10094;</a>
+                    <a class="next" onclick="showSlide('.ml_1', 1)">&#10095;</a>
+                    <span class="caption"></span>
+                </div>
+
             </div>
+            <br>
 
             <p>The full results from this experiment can be found <a href="../images/ml_1/ml_paper_1.pdf" target="_blank">here</a></p>
         </section>
@@ -65,36 +77,42 @@
                 An experiment was then conducted to compare each of these models. This was all done in python.</p>
             <p><strong>Results</strong>: Many of the K Nearest Neighbors Methods performed better on classification data then on regression data.
                 The performance of individual models depended on the structure of each dataset.</p>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_2/BreastCancerBarPlot.png" alt="Breast Cancer Dataset Performance">
-                    <figcaption>Breast Cancer Dataset Performance</figcaption>
+
+
+            <div class="slideshow-container ml_2">
+
+                <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
+                    <img src="../images/ml_2/BreastCancerBarPlot.png" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_2/GlassBarPlot.png" alt="Glass Dataset Performance">
-                    <figcaption>Glass Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
+                    <img src="../images/ml_2/SoyBarPlot.png" class="slideshow-img">
                 </div>
+
+                <div class="mySlides fade" data-caption="Glass Dataset Performance">
+                    <img src="../images/ml_2/GlassBarPlot.png" class="slideshow-img">
+                </div>
+
+                <div class="mySlides fade" data-caption="Abalone Dataset Performance">
+                    <img src="../images/ml_2/AbaloneBarPlot.png" class="slideshow-img">
+                </div>
+
+                <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
+                    <img src="../images/ml_2/HardwareBarPlot.png" class="slideshow-img">
+                </div>
+
+                <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
+                    <img src="../images/ml_2/ForestBarPlot.png" class="slideshow-img">
+                </div>
+
+                <div style="padding-top: 20px">
+                    <a class="prev" onclick="showSlide('.ml_2', -1)">&#10094;</a>
+                    <a class="next" onclick="showSlide('.ml_2', 1)">&#10095;</a>
+                    <span class="caption"></span>
+                </div>
+
             </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_2/SoyBarPlot.png" alt="Soybean (Small) Dataset Performance">
-                    <figcaption>Soybean (Small) Dataset Performance</figcaption>
-                </div>
-                <div class="image-item">
-                    <img src="../images/ml_2/AbaloneBarPlot.png" alt="Abalone Dataset Performance">
-                    <figcaption>Abalone Dataset Performance</figcaption>
-                </div>
-            </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_2/ForestBarPlot.png" alt="Forest Fires Dataset Performance">
-                    <figcaption>Forest Fires Dataset Performance</figcaption>
-                </div>
-                <div class="image-item">
-                    <img src="../images/ml_2/HardwareBarPlot.png" alt="Computer Hardware Dataset Performance">
-                    <figcaption>Computer Hardware Dataset Performance</figcaption>
-                </div>
-            </div>
+            <br>
 
             <p>The full results from this experiment can be found <a href="../images/ml_2/ml_paper_2.pdf" target="_blank">here</a></p>
         </section>
@@ -117,35 +135,39 @@
             <p><strong>Results</strong>: The neural network tended to perform better with zero or one hidden layer,
                 compared to two hidden layers. The amount of nodes in each hidden layer varied depending on the results
                 from hyperparameter tuning.</p>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_3/breast_bar.svg" alt="Breast Cancer Dataset Performance">
-                    <figcaption>Breast Cancer Dataset Performance</figcaption>
+
+            <div class="slideshow-container ml_3">
+
+                <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
+                    <img src="../images/ml_3/breast_bar.svg" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_3/glass_bar.svg" alt="Glass Dataset Performance">
-                    <figcaption>Glass Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
+                    <img src="../images/ml_3/soy_bar.svg" class="slideshow-img">
                 </div>
-            </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_3/soy_bar.svg" alt="Soybean (Small) Dataset Performance">
-                    <figcaption>Soybean (Small) Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Glass Dataset Performance">
+                    <img src="../images/ml_3/glass_bar.svg" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_3/abalone_bar.svg" alt="Abalone Dataset Performance">
-                    <figcaption>Abalone Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Abalone Dataset Performance">
+                    <img src="../images/ml_3/abalone_bar.svg" class="slideshow-img">
                 </div>
-            </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_3/forest_bar.svg" alt="Forest Fires Dataset Performance">
-                    <figcaption>Forest Fires Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
+                    <img src="../images/ml_3/machine_bar.svg" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_3/machine_bar.svg" alt="Computer Hardware Dataset Performance">
-                    <figcaption>Computer Hardware Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
+                    <img src="../images/ml_3/forest_bar.svg" class="slideshow-img">
                 </div>
+
+                <div style="padding-top: 20px">
+                    <a class="prev" onclick="showSlide('.ml_3', -1)">&#10094;</a>
+                    <a class="next" onclick="showSlide('.ml_3', 1)">&#10095;</a>
+                    <span class="caption"></span>
+                </div>
+
             </div>
 
             <p>The full results from this experiment can be found <a href="../images/ml_3/ml_paper_3.pdf" target="_blank">here</a></p>
@@ -170,35 +192,38 @@
                 particle swarm optimization.</p>
             <p><strong>Results</strong>: The performance of the models was really variable. Datasets that tended to
                 overfit with backpropogation would often perform better with population based methods.</p>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_4/BreastCancerAccuracy.png" alt="Breast Cancer Dataset Performance">
-                    <figcaption>Breast Cancer Dataset Performance</figcaption>
+            <div class="slideshow-container ml_4">
+
+                <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
+                    <img src="../images/ml_4/BreastCancerAccuracy.png" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_4/GlassAccuracy.png" alt="Glass Dataset Performance">
-                    <figcaption>Glass Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Soybean (small) Dataset Performance">
+                    <img src="../images/ml_4/SoyAccuracy.png" class="slideshow-img">
                 </div>
-            </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_4/SoyAccuracy.png" alt="Soybean (Small) Dataset Performance">
-                    <figcaption>Soybean (Small) Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Glass Dataset Performance">
+                    <img src="../images/ml_4/GlassAccuracy.png" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_4/AbaloneMSE.png" alt="Abalone Dataset Performance">
-                    <figcaption>Abalone Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Abalone Dataset Performance">
+                    <img src="../images/ml_4/AbaloneMSE.png" class="slideshow-img">
                 </div>
-            </div>
-            <div class="image-container">
-                <div class="image-item">
-                    <img src="../images/ml_4/ForestMSE.png" alt="Forest Fires Dataset Performance">
-                    <figcaption>Forest Fires Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Computer Hardware Dataset Performance">
+                    <img src="../images/ml_4/MachineMSE.png" class="slideshow-img">
                 </div>
-                <div class="image-item">
-                    <img src="../images/ml_4/MachineMSE.png" alt="Computer Hardware Dataset Performance">
-                    <figcaption>Computer Hardware Dataset Performance</figcaption>
+
+                <div class="mySlides fade" data-caption="Forest Fire Dataset Performance">
+                    <img src="../images/ml_4/ForestMSE.png" class="slideshow-img">
                 </div>
+
+                <div style="padding-top: 20px">
+                    <a class="prev" onclick="showSlide('.ml_4', -1)">&#10094;</a>
+                    <a class="next" onclick="showSlide('.ml_4', 1)">&#10095;</a>
+                    <span class="caption"></span>
+                </div>
+
             </div>
 
             <p>The full results from this experiment can be found <a href="../images/ml_4/ml_paper_4.pdf" target="_blank">here</a></p>
