Add top section to personal projects

--- a/html/personal_projects.html
+++ b/html/personal_projects.html
@@ -22,7 +22,37 @@
 </header>
 
 <main>
-    <div class="container">
+
+    <h1>Personal Projects</h1>
+    <p>This page is meant to give a short descriptions of many of the projects that I have been a part of. </p>
+
+    <p>There are four machine learning projects that are listed. These projects are set up in an experiment style where
+    a question was prompted and then an experiment was completed to test our hypotheses. A full report will be linked
+    after each project. This report will contain a detailed explanation of the problem, the methods that were used in the
+    experiment, and a detailed analysis of the results</p>
+
+    <p>The next project is a small web application that is meant to help a user track what trails they have ridden in
+    the Bozeman area. This application lets users add trails which the trails will then be plotted on a 3d map as well
+    as being displayed on the home page. </p>
+
+    <p>The final project is a small unity game that allows the user to rol a ball around a surface while trying to
+        collect  pick-ups. There is a antagonist that will chase the user while they are trying to pick up the
+        collectibles.</p>
+
+    <p>All the source code for these projects can be found on my <a href="https://github.com/joshaney324">GitHub</a>.</p>
+
+    <div class="project-list">
+        <ul>
+            <li><strong>Project 1: </strong><a href="#ml_1">Naive Bayes Model From Scratch</a></li>
+            <li><strong>Project 2: </strong><a href="#ml_2">K-Nearest-Neighbors Methods From Scratch</a></li>
+            <li><strong>Project 3: </strong><a href="#ml_3">Neural Network From Scratch</a></li>
+            <li><strong>Project 4: </strong><a href="#ml_4">Experimenting With Different Neural Network Training Methods (Backpropagation and Population Based Methods)</a></li>
+            <li><strong>Project 5: </strong><a href="#bike-webapp">Bozeman Bike Trails Web Application</a></li>
+            <li><strong>Project 6: </strong><a href="#unity">Unity Project</a></li>
+        </ul>
+    </div>
+
+    <div id="ml_1" class="container">
         <section class="project">
             <h2>Machine Learning Project 1 - Naive Bayes</h2>
             <p><strong>Description:</strong> For this project, I worked in a team with another student at Montana State University. We
@@ -61,7 +91,7 @@
         </section>
     </div>
 
-    <div class="container">
+    <div id="ml_2" class="container">
         <section class="project">
             <h2>Machine Learning Project 2 - K Nearest Neighbors Methods</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana State University.
@@ -118,7 +148,7 @@
         </section>
     </div>
 
-    <div class="container">
+    <div id="ml_3" class="container">
         <section class="project">
             <h2>Machine Learning Project 3 - Densely Connected Neural Network</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana State University.
@@ -174,7 +204,7 @@
         </section>
     </div>
 
-    <div class="container">
+    <div id="ml_4" class="container">
         <section class="project">
             <h2>Machine Learning Project 4 - A Comparison of Neural Network Training Methods</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana State University.
@@ -230,7 +260,7 @@
         </section>
     </div>
 
-    <div class="container">
+    <div id="bike-webapp" class="container">
         <section class="project">
             <h2>Web Project</h2>
             <p>Description: A short description of your web project, the goal of the website, and the technologies you used (e.g., HTML, CSS, JavaScript, etc.).</p>
@@ -239,7 +269,7 @@
         </section>
     </div>
 
-    <div class="container">
+    <div id="unity" class="container">
         <section class="project">
             <h2>Unity Project</h2>
             <p>Description: A brief explanation of the Unity game or application project.</p>
