--- a/html/personal_projects.html
+++ b/html/personal_projects.html
@@ -107,9 +107,21 @@
                 <a href="https://archive.ics.uci.edu/dataset/1/abalone">Abalone Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/162/forest+fires">Forest Fires Dataset</a>, and the
                 <a href="https://archive.ics.uci.edu/dataset/29/computer+hardware">Computer Hardware Dataset</a>.
-                An experiment was then conducted to compare each of these models. This was all done in python.</p>
+                For the classification datasets, a base KNN classification model was created. To do this we took out a
+                hold-out fold from the data to tune all the hyperparameters for the model. Once the model was tuned, 10-fold
+                cross validation was completed with the remaining data. There was no removal of noisy data during this run.
+                We then completed another run of this experiment, but we used an edited KNN classification model, so the
+                model would remove data points that it got wrong. This in turn ended up removing noise. A similar process
+                was completed for the regression datasets, but the only difference in the model was that a kernel was
+                used to weight the distance of the K closest neighbors instead of just going with the mean of the k
+                closest neighbors. For the edited KNN regression model, we had to tune a threshold for how close the
+                prediction was to the actual value to decide if the model would remove the datapoint. Finally, we
+                performed the experiment one more time, but instead of using edited KNN models to find the edited dataset,
+                we used the centroids from a K-Means Clustering model. Once these experiments were completed, we then
+                analyzed and compared the results from all the different models</p>
             <p><strong>Results</strong>: Many of the K Nearest Neighbors Methods performed better on classification data then on regression data.
-                The performance of individual models depended on the structure of each dataset.</p>
+                The performance of individual models depended on the structure of each dataset. Depending on if the dataset
+                contained large amounts of outliers, the K-Means model or the edited model would perform better.</p>
 
 
             <div class="slideshow-container ml_2">
@@ -155,19 +167,23 @@
         <section class="project">
             <h2>Machine Learning Project 3 - Densely Connected Neural Network</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana State University.
-                We were tasked with coding a densely connected neural network. This network was trained with backpropagation. We then used our
-                model on a variety of datasets. We used the
+                We were tasked with coding a densely connected neural network. We used the
                 <a href="https://archive.ics.uci.edu/dataset/15/breast+cancer+wisconsin+original">Breast Cancer Wisconsin Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/42/glass+identification">Glass Identification Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/91/soybean+small">Soybean (Small) Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/1/abalone">Abalone Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/162/forest+fires">Forest Fires Dataset</a>, and the
                 <a href="https://archive.ics.uci.edu/dataset/29/computer+hardware">Computer Hardware Dataset</a>.
-                An experiment was then conducted to analyze the performance of our neural network with varying network
-                sizes and varying amounts of hidden layers on each dataset.</p>
+                The network that was created to be used on this data was a densely connected network with no bias nodes.
+                Standard backpropagation was then used to train the network based off of the loss functions that we
+                designated each dataset. Once this was done, we tuned learning rate, and the number of nodes in each
+                hidden layer for zero, one and two hidden layers based off of each dataset. The tuning was done in the
+                same manner as it was done in the KNN methods project with a hold-out fold. An experiment was then conducted to analyze the performance of our neural network with varying network
+                sizes and varying amounts of hidden layers on each dataset. Each dataset was tested by completing 10-fold
+                cross validation excluding the hold out fold's data points. These results were then analyzed for each dataset.</p>
             <p><strong>Results</strong>: The neural network tended to perform better with zero or one hidden layer,
-                compared to two hidden layers. The amount of nodes in each hidden layer varied depending on the results
-                from hyperparameter tuning.</p>
+                compared to two hidden layers. On the more complex datasets, the network may perform better with one
+                hidden layer, but it rarely performed best with two hidden layers.</p>
 
             <div class="slideshow-container ml_3">
 
@@ -211,20 +227,22 @@
         <section class="project">
             <h2>Machine Learning Project 4 - A Comparison of Neural Network Training Methods</h2>
             <p><strong>Description</strong>: For this project, I worked in a team with two other students at Montana State University.
-                We were tasked with coding multiple different training methods for a neural network. We focussed on
-                population based methods and backpropogation. We then used our
-                models on a variety of datasets. We used the
+                We were tasked with coding multiple different training methods for a neural network. We used the
                 <a href="https://archive.ics.uci.edu/dataset/15/breast+cancer+wisconsin+original">Breast Cancer Wisconsin Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/42/glass+identification">Glass Identification Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/91/soybean+small">Soybean (Small) Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/1/abalone">Abalone Dataset</a>,
                 <a href="https://archive.ics.uci.edu/dataset/162/forest+fires">Forest Fires Dataset</a>, and the
                 <a href="https://archive.ics.uci.edu/dataset/29/computer+hardware">Computer Hardware Dataset</a>.
-                This project then built on project 3. We compared our results from backpropogation to three other
-                network training algorithms. These algorithms were the genetic algorithm, differential evolution, and
-                particle swarm optimization.</p>
+                This project then built on project 3. We used the same network structure that was created in project 3,
+                but this time we intended on testing other training methods. We used backpropagation as our baseline to
+                compare to, then we trained the network by the genetic algorithm, differential evolution, and particle
+                swarm optimization. Because of the complexity of these algorithms and the computational power needed,
+                we only tuned a small amount of the available hyperparameters. Once again we performed 10-fold cross
+                validation on all the datasets and then compared the results across all the training methods.</p>
             <p><strong>Results</strong>: The performance of the models was really variable. Datasets that tended to
-                overfit with backpropogation would often perform better with population based methods.</p>
+                overfit with backpropagation would often perform better with population based methods and datasets that
+                were relatively simple would often perform drastically better with backpropagation.</p>
             <div class="slideshow-container ml_4">
 
                 <div class="mySlides fade" data-caption="Breast Cancer Dataset Performance">
