--- a/html/research_experience.html
+++ b/html/research_experience.html
@@ -31,3 +31,9 @@
 
 </main>
 
+<footer class="footer">
+    <div class="footer-bottom">
+        <p>© 2024 Josh Aney | <a href="mailto:josh.aney@icloud.com">josh.aney@icloud.com</a> | <a href="tel:+5075130517">(507)-513-0517</a> | GitHub: <a href="https://github.com/joshaney324">joshaney324</a></p>
+    </div>
+</footer>
+
