--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,6 @@
     <nav>
         <ul>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="research_experience.html">Research/Experience</a></li>
             <li><a href="personal_projects.html">Personal Projects</a></li>
             <li><a href="../images/resume.pdf" target="_blank">Resume</a></li>
         </ul>
@@ -51,6 +50,13 @@
                 I also love getting to work with the math involved in many of these problems. I had the opportunity to
                 code a few common machine learning algorithms from scratch, and it truly gave me a new perspective of
                 why math is so important in my everyday life.</p>
+            <h2>Professional Experience</h2>
+            <p>During the 2024 summer I got the opportunity to work with the CaMP (Cybernetics and Motor Physiology) lab
+                at Mayo Clinic. I worked with Dr. Kai Miller on a research project that involved me analyzing voltage
+                traces from the brain with different machine learning techniques. This experience taught be a lot about
+                how to handle real world challenges that could be faced when working in the machine learning field. I
+                often had to work with small datasets that would have missing values or noisy data. This caused me to be
+                very conscious on how I trained the models and how I chose which models to use.</p>
             <h2>Extracurricular Activities</h2>
             <p>For the past two years, I have been able to be a part of the Spirit of the West Drumline. I started
                 playing musical instruments at a young age, and I have been hooked ever since. I now have the privilege
